<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>genomix-driver</artifactId>
	<name>genomix-driver</name>

	<parent>
		<groupId>edu.uci.ics.hyracks</groupId>
		<artifactId>genomix</artifactId>
		<version>0.2.10-SNAPSHOT</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<fork>true</fork>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>genomix-scripts</id>
						<configuration>
							<platforms>
								<platform>unix</platform>
							</platforms>
							<programs>
								<program>
									<mainClass>edu.uci.ics.genomix.driver.GenomixDriver</mainClass>
									<name>genomix</name>
								</program>
							</programs>
							<repositoryLayout>flat</repositoryLayout>
							<repositoryName>lib</repositoryName>
							<configurationDirectory>etc:"$HADOOP_HOME"/conf:/etc/hadoop/conf</configurationDirectory>
							<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
							<useWildcardClassPath>true</useWildcardClassPath>
							<extraJvmArguments>-Djava.util.logging.config.file=@BASEDIR@/conf/driver.logging.properties</extraJvmArguments>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
					<execution>
						<id>hyracks-scripts</id>
						<configuration>
							<platforms>
								<platform>unix</platform>
							</platforms>
							<useWildcardClassPath>true</useWildcardClassPath>
							<programs>
								<program>
									<mainClass>edu.uci.ics.hyracks.control.cc.CCDriver</mainClass>
									<name>hyrackscc</name>
								</program>
								<program>
									<mainClass>edu.uci.ics.hyracks.control.nc.NCDriver</mainClass>
									<name>hyracksnc</name>
								</program>
							</programs>
							<binFolder>hyracks/bin</binFolder>
							<repositoryLayout>flat</repositoryLayout>
							<repositoryName>../lib</repositoryName>
							<configurationDirectory>etc:"$HADOOP_HOME"/conf:/etc/hadoop/conf</configurationDirectory>
							<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
							<extraJvmArguments>-Djava.util.logging.config.file=@BASEDIR@/../conf/driver.logging.properties</extraJvmArguments>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
					<execution>
						<id>pregelix-scripts</id>
						<configuration>
							<platforms>
								<platform>unix</platform>
							</platforms>
							<useWildcardClassPath>true</useWildcardClassPath>
							<programs>
								<program>
									<mainClass>edu.uci.ics.hyracks.control.cc.CCDriver</mainClass>
									<name>pregelixcc</name>
								</program>
								<program>
									<mainClass>edu.uci.ics.hyracks.control.nc.NCDriver</mainClass>
									<name>pregelixnc</name>
									<commandLineArguments>
										<commandLineArgument>-app-nc-main-class</commandLineArgument>
										<commandLineArgument>edu.uci.ics.pregelix.runtime.bootstrap.NCApplicationEntryPoint</commandLineArgument>
									</commandLineArguments>
								</program>
							</programs>
							<binFolder>pregelix/bin</binFolder>
							<repositoryLayout>flat</repositoryLayout>
							<repositoryName>../lib</repositoryName>
							<configurationDirectory>etc:"$HADOOP_HOME"/conf:/etc/hadoop/conf</configurationDirectory>
							<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
							<extraJvmArguments>-Djava.util.logging.config.file=@BASEDIR@/../conf/driver.logging.properties</extraJvmArguments>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-5</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<configuration>
							<descriptors>
								<descriptor>src/main/assembly/binary-assembly.xml</descriptor>
							</descriptors>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>attached</goal>
						</goals>
					</execution>
					<execution>
						<id>make-my-jar-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.2</version>
				<configuration>
					<forkMode>pertest</forkMode>
					<argLine>-enableassertions -Xmx1024m -XX:MaxPermSize=300m
						-Dfile.encoding=UTF-8
					</argLine>
					<includes>
						<include>**/*TestSuite.java</include>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>.</directory>
							<includes>
								<include>teststore*</include>
								<include>edu*</include>
								<include>actual*</include>
								<include>build*</include>
								<include>ClusterController*</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-hdfs-core</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>genomix-data</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-dataflow-std</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-api</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-dataflow-common</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>genomix-hadoop</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>genomix-hyracks</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.pregelix</groupId>
			<artifactId>genomix-pregelix</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>genomix-hyracks</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-hdfs-core</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-data-std</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-control-cc</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-control-nc</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.kenai.nbpwr</groupId>
			<artifactId>org-apache-commons-io</artifactId>
			<version>1.3.1-201002241208</version>
			<type>nbm</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks.examples</groupId>
			<artifactId>hyracks-integration-tests</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>edu.uci.ics.hyracks</groupId>
			<artifactId>hyracks-ipc</artifactId>
			<version>0.2.10-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-core</artifactId>
			<version>0.20.2</version>
			<exclusions>
				<exclusion>
					<groupId>tomcat</groupId>
					<artifactId>jasper-runtime</artifactId>
				</exclusion>
				<exclusion>
					<groupId>tomcat</groupId>
					<artifactId>jasper-compiler</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-test</artifactId>
			<version>0.20.2</version>
		</dependency>
		<dependency>
			<groupId>jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.13</version>
		</dependency>
	</dependencies>
</project>
